Bug 289971 - Its needed to click twice in folders panel (left panel)
Summary: Its needed to click twice in folders panel (left panel)
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 1.99
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 290725 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-28 00:12 UTC by
Modified: 2012-01-05 19:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-12-28 00:12:39 UTC
Version:           1.6.1 (using Devel) 
OS:                Linux

I have my mouse configured for dhouble click but that should not be related to dolphin folder panel.

The folder panel should contonue opening folders (to show them in right panel) with a single click even if the mouse is configured for single.click.

Reproducible: Didn't try

Steps to Reproduce:
click in some folder in the folders panel (left panel) and nothing hapens.

Actual Results:  
Clicking in foilders panel doesnt open the folder, its needed to click twice.

Expected Results:  
Should open the folder in folders panel when clicking once, like it always happaned.

OS: Linux (x86_64) release 3.1.5-1.1-desktop
Compiler: gcc
Comment 1 Peter Penz 2012-01-05 18:20:21 UTC
*** Bug 290725 has been marked as a duplicate of this bug. ***
Comment 2 Peter Penz 2012-01-05 19:44:28 UTC
Git commit 5812259dff1f09eb401324e8214d245c64e5b2e5 by Peter Penz.
Committed on 05/01/2012 at 20:41.
Pushed by ppenz into branch 'KDE/4.8'.

Folders Panel: Activate folders on single-click

Even if double-click is used as default setting, the folders panel should
open folders with a single-click.
FIXED-IN: 4.8.0

M  +13   -2    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +10   -0    dolphin/src/kitemviews/kitemlistcontroller.h
M  +1    -0    dolphin/src/panels/folders/folderspanel.cpp

http://commits.kde.org/kde-baseapps/5812259dff1f09eb401324e8214d245c64e5b2e5
Comment 3 Peter Penz 2012-01-05 19:45:01 UTC
Git commit 7a364cbf489af25e123d18713523151a3a53f814 by Peter Penz.
Committed on 05/01/2012 at 20:41.
Pushed by ppenz into branch 'master'.

Folders Panel: Activate folders on single-click

Even if double-click is used as default setting, the folders panel should
open folders with a single-click.
FIXED-IN: 4.8.0

M  +13   -2    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +10   -0    dolphin/src/kitemviews/kitemlistcontroller.h
M  +1    -0    dolphin/src/panels/folders/folderspanel.cpp

http://commits.kde.org/kde-baseapps/7a364cbf489af25e123d18713523151a3a53f814